@@ -3,14 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{tpl:BlogLanguage}}" lang="{{tpl:BlogLanguage}}">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="MSSmartTagsPreventParsing" content="TRUE" />
   <meta name="ROBOTS" content="{{tpl:BlogMetaRobots robots="NOINDEX,NOARCHIVE"}}" />
   
   <title>{{tpl:ComListePageTitle encode_html="1"}} - {{tpl:BlogName encode_html="1"}}</title>
   <meta name="copyright" content="{{tpl:BlogCopyrightNotice encode_html="1"}}" />
   <meta name="author" content="{{tpl:BlogEditor encode_html="1"}}" />
   
-  <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
   <meta name="dc.title" lang="{{tpl:BlogLanguage}}" content="{{tpl:ComListePageTitle}} - {{tpl:BlogName encode_html="1"}}" />
   <meta name="dc.language" content="{{tpl:BlogLanguage}}" />
   <meta name="dc.publisher" content="{{tpl:BlogEditor encode_html="1"}}" />
@@ -18,7 +16,6 @@
   <meta name="dc.type" content="text" />
   <meta name="dc.format" content="text/html" />
   
-  <link rel="top" href="{{tpl:BlogURL}}" title="{{tpl:lang Home}}" />
   <link rel="contents" title="{{tpl:lang Archives}}" href="{{tpl:BlogArchiveURL}}" />
   
   {{tpl:include src="_head.html"}}
@@ -40,37 +37,34 @@
 				<tpl:ComListeCommentsEntries>
 					<tpl:CommentsHeader>
 						<dl>
-					</tpl:CommentsHeader>	
-					<dt id="c{{tpl:CommentID}}" class="{{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
-					<a href="{{tpl:CommentPostURL}}#c{{tpl:CommentID}}" class="comment-number">{{tpl:CommentOrderNumber}}.</a>
-					{{tpl:lang On}} {{tpl:CommentDate}}, {{tpl:CommentTime}}
-					{{tpl:lang by}} {{tpl:CommentAuthorLink}}
-					<br />({{tpl:lang source}}: {{tpl:CommentEntryTitle}})
-					</dt>
-					<dd class="{{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
-						<!-- # --BEHAVIOR-- publicCommentBeforeContent -->
-						{{tpl:SysBehavior behavior="publicCommentBeforeContent"}}
-						{{tpl:CommentContent}}
-						<a href="{{tpl:CommentPostURL}}#c{{tpl:CommentID}}">{{tpl:ComListeOpenPostTitle}} ...</a>
-						<br /><br />
-						<!-- # --BEHAVIOR-- publicCommentAfterContent -->
-						{{tpl:SysBehavior behavior="publicCommentAfterContent"}}
-					</dd>
+					</tpl:CommentsHeader>
+			<dt id="c{{tpl:CommentID}}" class="{{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
+				<a href="{{tpl:CommentPostURL}}#c{{tpl:CommentID}}" class="comment-number">{{tpl:CommentOrderNumber}}.</a>
+				{{tpl:lang On}} {{tpl:CommentDate}}, {{tpl:CommentTime}},
+				{{tpl:lang by}} {{tpl:CommentAuthorLink}}
+				<br />({{tpl:lang source:}} <a href="{{tpl:CommentPostURL}}#c{{tpl:CommentID}}">{{tpl:CommentEntryTitle}}</a>)
+			</dt>
+			<dd class="{{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
+				<!-- # --BEHAVIOR-- publicCommentBeforeContent -->
+			  {{tpl:SysBehavior behavior="publicCommentBeforeContent"}}
+			  {{tpl:CommentContent}}
+			  <!-- # --BEHAVIOR-- publicCommentAfterContent -->
+			  {{tpl:SysBehavior behavior="publicCommentAfterContent"}}
+	    </dd>
 					<tpl:CommentsFooter>
 						</dl>
 					</tpl:CommentsFooter>
 				</tpl:ComListeCommentsEntries>
 
 	   	</div> <!-- End #post -->
+	<p class="pagination">
+	{{tpl:ComListePaginationLinks}}
+	</p>
 
-				<p class="pagination">
-					{{tpl:ComListePaginationLinks}}
-				</p>	
-				<p class="post-info">
-					{{tpl:lang Number of comments per page}} :: {{tpl:ComListeNbCommentsPerPage}}<br />
-					{{tpl:lang Current page}} :: {{tpl:ComListeCurrentPage}}
-				</p>		
-
+	<p class="post-info">
+	{{tpl:lang Number of comments per page:}} {{tpl:ComListeNbCommentsPerPage}}<br />
+	{{tpl:lang Number of comments:}} {{tpl:ComListeNbComments}}
+	</p>
 
   </div>
 </div>
@@ -85,7 +79,6 @@
 
 {{tpl:Widgets type="nav"}}
 
-
 <div class="categories-btm"></div>
 
 <div class="side-meta"></div>
@@ -96,5 +89,4 @@
 {{tpl:include src="_footer.html"}}
 
 </body>
-</html>		
-
+</html>
