@@ -1,103 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{tpl:BlogLanguage}}" lang="{{tpl:BlogLanguage}}">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="MSSmartTagsPreventParsing" content="TRUE" />
-  <meta name="ROBOTS" content="{{tpl:BlogMetaRobots robots="NOINDEX,NOARCHIVE"}}" />
-  
-  <title>{{tpl:ComListePageTitle encode_html="1"}} - {{tpl:BlogName encode_html="1"}}</title>
-  <meta name="copyright" content="{{tpl:BlogCopyrightNotice encode_html="1"}}" />
-  <meta name="author" content="{{tpl:BlogEditor encode_html="1"}}" />
-  
-  <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
-  <meta name="dc.title" lang="{{tpl:BlogLanguage}}" content="{{tpl:ComListePageTitle}} - {{tpl:BlogName encode_html="1"}}" />
-  <meta name="dc.language" content="{{tpl:BlogLanguage}}" />
-  <meta name="dc.publisher" content="{{tpl:BlogEditor encode_html="1"}}" />
-  <meta name="dc.rights" content="{{tpl:BlogCopyrightNotice encode_html="1"}}" />
-  <meta name="dc.type" content="text" />
-  <meta name="dc.format" content="text/html" />
-  
-  <link rel="top" href="{{tpl:BlogURL}}" title="{{tpl:lang Home}}" />
-  <link rel="contents" title="{{tpl:lang Archives}}" href="{{tpl:BlogArchiveURL}}" />
-  
-  {{tpl:include src="_head.html"}}
-</head>
-
-<body class="dc-comliste">
-<div id="page">
-{{tpl:include src="_top.html"}}
-
-<div id="wrapper">
-
-<div id="main">
-  <div id="content">
-  
-    <div class="grid">
-      <!-- # lead -->
-      <div id="lead" class="grid-l">
-        <h2>{{tpl:ComListePageTitle encode_html="1"}}</h2>
-      </div>
-      
-      <!-- # meta -->
-      <div id="meta" class="grid-s">
-        {{tpl:include src="inc_meta.html"}}
-      </div>
-      
-      <div class="grid-l">
-
-			<div class="post">
-				
-				<tpl:ComListeCommentsEntries>
-					<tpl:CommentsHeader>
-						<dl>
-					</tpl:CommentsHeader>	
-					<dt id="c{{tpl:CommentID}}" class="{{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
-					<a href="{{tpl:CommentPostURL}}#c{{tpl:CommentID}}" class="comment-number">{{tpl:CommentOrderNumber}}.</a>
-					{{tpl:lang On}} {{tpl:CommentDate}}, {{tpl:CommentTime}}
-					{{tpl:lang by}} {{tpl:CommentAuthorLink}}
-					<br />({{tpl:lang source}}: {{tpl:CommentEntryTitle}})
-					</dt>
-					<dd class="{{tpl:CommentIfMe}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}">
-						<!-- # --BEHAVIOR-- publicCommentBeforeContent -->
-						{{tpl:SysBehavior behavior="publicCommentBeforeContent"}}
-						{{tpl:CommentContent}}
-						<a href="{{tpl:CommentPostURL}}#c{{tpl:CommentID}}">{{tpl:ComListeOpenPostTitle}} ...</a>
-						<br /><br />
-						<!-- # --BEHAVIOR-- publicCommentAfterContent -->
-						{{tpl:SysBehavior behavior="publicCommentAfterContent"}}
-					</dd>
-					<tpl:CommentsFooter>
-						</dl>
-					</tpl:CommentsFooter>
-				</tpl:ComListeCommentsEntries>
-
-  			
-	   			</div> <!-- End #post -->
-				<p class="pagination">
-					{{tpl:ComListePaginationLinks}}
-				</p>	
-				<p class="post-info">
-					{{tpl:lang Number of comments per page}} :: {{tpl:ComListeNbCommentsPerPage}}<br />
-					{{tpl:lang Current page}} :: {{tpl:ComListeCurrentPage}}
-				</p>					
-
-
-			</div>
-			
-      <!-- # extra -->
-      <div id="extra" class="grid-s widgets">
-        {{tpl:include src="inc_extra.html"}}
-        {{tpl:Widgets type="nav"}}
-      </div>
-    </div>
-  
-  </div>
-</div>
-
-</div> <!-- End #wrapper -->
-
-{{tpl:include src="_footer.html"}}
-</div> <!-- End #page -->
-</body>
-</html>
