@@ -1,0 +1,75 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="{{tpl:BlogLanguage}}" lang="{{tpl:BlogLanguage}}">
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="ROBOTS" content="{{tpl:BlogMetaRobots robots="NOINDEX,NOARCHIVE"}}" />
+
+  <title>{{tpl:ComListePageTitle encode_html="1"}} - {{tpl:BlogName encode_html="1"}}</title>
+  <meta name="copyright" content="{{tpl:BlogCopyrightNotice encode_html="1"}}" />
+  <meta name="author" content="{{tpl:BlogEditor encode_html="1"}}" />
+
+  <meta name="dc.title" lang="{{tpl:BlogLanguage}}" content="{{tpl:ComListePageTitle}} - {{tpl:BlogName encode_html="1"}}" />
+  <meta name="dc.language" content="{{tpl:BlogLanguage}}" />
+  <meta name="dc.publisher" content="{{tpl:BlogEditor encode_html="1"}}" />
+  <meta name="dc.rights" content="{{tpl:BlogCopyrightNotice encode_html="1"}}" />
+  <meta name="dc.type" content="text" />
+  <meta name="dc.format" content="text/html" />
+
+  <link rel="contents" title="{{tpl:lang Archives}}" href="{{tpl:BlogArchiveURL}}" />
+
+  {{tpl:include src="_head.html"}}
+</head>
+
+<body class="dc-comliste">
+<div id="body">
+{{tpl:include src="_top.html"}}
+
+	<div id="page" class="{{tpl:Freshy2LayoutClass}}">
+   	<div class="container">
+      <div id="frame">
+        <div id="content">
+
+  <h2>{{tpl:ComListePageTitle encode_html="1"}}</h2>
+	<div class="post">
+		<tpl:ComListeCommentsEntries>
+			<tpl:CommentsHeader>
+	      <div class="commentlist">
+			</tpl:CommentsHeader>
+		  <div class="comment {{tpl:CommentIfMe return="comment_author"}} {{tpl:CommentIfOdd}} {{tpl:CommentIfFirst}}" id="c{{tpl:CommentID}}">
+			{{tpl:gravatar class="avatar" size="40"  alt="Gravatar de %s"}} <h4>{{tpl:CommentContent cut_string="50" remove_html="1"}}</h4>
+			<small><span class="author">{{tpl:CommentAuthorLink}}</span> | {{tpl:CommentDate}} | {{tpl:CommentTime}}
+			<br />({{tpl:lang source:}} <a href="{{tpl:CommentPostURL}}#c{{tpl:CommentID}}">{{tpl:CommentEntryTitle}}</a>)</small>
+			<div class="comment_content">
+			<!-- # --BEHAVIOR-- publicCommentBeforeContent -->
+			{{tpl:SysBehavior behavior="publicCommentBeforeContent"}}
+			{{tpl:CommentContent}}
+			<!-- # --BEHAVIOR-- publicCommentAfterContent -->
+			{{tpl:SysBehavior behavior="publicCommentAfterContent"}}
+			</div>
+			</div>
+			<tpl:CommentsFooter>
+			</div>
+			</tpl:CommentsFooter>
+		</tpl:ComListeCommentsEntries>
+  </div> <!-- End #post -->
+	<p class="pagination">
+	{{tpl:ComListePaginationLinks}}
+	</p>
+
+	<p class="post-info">
+	{{tpl:lang Number of comments per page:}} {{tpl:ComListeNbCommentsPerPage}}<br />
+	{{tpl:lang Number of comments:}} {{tpl:ComListeNbComments}}
+	</p>
+
+	  </div> <!-- End #content -->
+
+	  {{tpl:include src="_sidebar.html"}}
+	</div> <!-- End #frame -->
+      </div> <!-- End #container -->
+    </div> <!-- End #page -->
+
+    {{tpl:include src="_footer.html"}}
+  </div> <!-- End #body -->
+</body>
+</html>
