@@ -14,7 +14,6 @@
 </tpl:Block>
 
 <tpl:Block name="head-linkrel">
-  <link rel="top" href="{{tpl:BlogURL}}" title="{{tpl:lang Home}}" />
   <link rel="contents" title="{{tpl:lang Archives}}" href="{{tpl:BlogArchiveURL}}" />
 </tpl:Block>
 
