@@ -1,3 +1,8 @@
+comListe 0.3.1 - 06-06-2015 - Pierre Van Glabeke
+===========================================================
+* modifs html5
+* mise à jour adapt-themes
+
 comListe 0.3 - 03-03-2015 - Pierre Van Glabeke
 ===========================================================
 * correction localisation
